--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "src/main.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "webpack"
   },
   "author": "lesguillemets",
   "license": "UNLICENSED",
